--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,10 @@
         android:id="@+id/btnControl"
         android:layout_width="151dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/holo_blue_bright"
         android:text="@string/start"
         android:textSize="16sp"
@@ -20,17 +23,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtScore"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imgDrone"
+        app:layout_constraintVertical_bias="0.975" />
 
     <ImageButton
         android:id="@+id/imgDrone"
         android:layout_width="87dp"
         android:layout_height="87dp"
         android:background="@android:color/holo_blue_bright"
+        android:scaleType="fitCenter"
         android:visibility="visible"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="279dp"
@@ -39,15 +41,12 @@
     <TextView
         android:id="@+id/txtScore"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="49dp"
         android:background="@android:color/holo_blue_bright"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
 </android.support.constraint.ConstraintLayout>
