--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,7 @@
         android:id="@+id/btnControl"
         android:layout_width="151dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="2dp"
         android:background="@android:color/holo_blue_bright"
         android:text="@string/start"
         android:textSize="16sp"
@@ -23,30 +20,36 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgDrone"
-        app:layout_constraintVertical_bias="0.975" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/imgDrone"
         android:layout_width="87dp"
         android:layout_height="87dp"
         android:background="@android:color/holo_blue_bright"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:visibility="visible"
         app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="50dp" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="144dp"
+        tools:layout_editor_absoluteY="219dp" android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/txtScore"
         android:layout_width="fill_parent"
-        android:layout_height="49dp"
+        android:layout_height="50dp"
         android:background="@android:color/holo_blue_bright"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
